mapreduce/mapreduce-kube/spark-communication-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: spark-communication
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/spark-communication: "true"
  podSelector:
    matchLabels:
      io.kompose.network/spark-communication: "true"
